sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:2: error: not found: value ecart
def combSort() {ecart=getNombreValeurs()
                ^AlgCombSort:3: error: not found: value inv
                inv=false
                ^AlgCombSort:4: error: not found: value inv
                do{inv=false
                   ^AlgCombSort:5: error: not found: value ecart
                  if (ecart>1)
                      ^AlgCombSort:6: error: not found: value ecart
                   {ecart=ecart/1.3}
                    ^AlgCombSort:7: error: not found: value i
                   i=0
                   ^AlgCombSort:8: error: not found: value i
                   while (i+ecart < lgr)
                          ^AlgCombSort:8: error: not found: value ecart
                   while (i+ecart < lgr)
                            ^AlgCombSort:8: error: not found: value lgr
                   while (i+ecart < lgr)
                                    ^AlgCombSort:9: error: not found: value i
                   {if (plusPetitQue(i+ecart,i))
                                     ^AlgCombSort:9: error: not found: value ecart
                   {if (plusPetitQue(i+ecart,i))
                                       ^AlgCombSort:9: error: not found: value i
                   {if (plusPetitQue(i+ecart,i))
                                             ^AlgCombSort:10: error: not found: value i
                        {echange(i+ecart,ecart)
                                 ^AlgCombSort:10: error: not found: value ecart
                        {echange(i+ecart,ecart)
                                   ^AlgCombSort:10: error: not found: value ecart
                        {echange(i+ecart,ecart)
                                         ^AlgCombSort:11: error: not found: value inv
                        inv=true}
                        ^AlgCombSort:12: error: not found: value i
                   i+=1}
                   ^AlgCombSort:16: error: not found: value ecart
               while (ecart>1 || inv==true)}
                      ^AlgCombSort:16: error: not found: value inv
               while (ecart>1 || inv==true)}
                                 ^