sort.basic.comb.AlgCombSort.scala.code
def combSort() {ecart=getNombreValeurs()
                inv=false
                do{inv=false
                  if (ecart>1)
                   {ecart=ecart/1.3}
                   i=0
                   while (i+ecart < lgr)
                   {if (plusPetitQue(i+ecart,i))
                        {echange(i+ecart,ecart)
                        inv=true}
                   i+=1}
                     
                     
                   } 
               while (ecart>1 || inv==true)}
